# netbox-pf

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
netbox_pf/: __init__.py  choices.py  filtersets.py  forms.py  models.py  navigation.py  tables.py  urls.py  views.py
netbox_pf/api/: serializers.py  urls.py  views.py
netbox_pf/migrations/: 0001_initial.py  0002_natrule.py  0003_gateways.py
netbox_pf/templates/netbox_pf/: alias.html  firewallrule.html  gateway.html  gatewaygroup.html  gatewaygroupmember.html  natrule.html
netbox_pf/tests/: test_api.py  test_filtersets.py  test_gateways.py  test_models.py
tests/: test_api.py
